--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,18 @@
 **.tool-versions
 **plan-checkov.json
 **plan.out
+*.log
 .general-resources
 .general-resources.mk
 .python-version
 .venv/
 __pycache__
+docs/build
 examples/README.md
 jest.json
 jest.log
+junit*.xml
+k6.json
 node_modules/
 pytest.json
 pytest.log
