--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,8 @@ jobs:
         run: |
           terraform init && terraform test -junit-xml=junit.xml
 
-      - name: Upload test results
-        uses: actions/upload-artifact@v3
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v5
+        if: success() || failure() # always run even if the previous step fails
         with:
-          name: terraform-junit-report
-          path: junit.xml
+          report_paths: '**/junit.xml'
