--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
       - uses: hashicorp/setup-terraform@v1
 
       - name: terraform test
