--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,10 +26,10 @@ jobs:
       - name: terraform test
         id: test
         run: |
-          terraform init && terraform test -junit-xml=junit.xml -verbose
+          terraform init && terraform test -junit-xml=tf_junit.xml
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v5
         if: success() || failure() # always run even if the previous step fails
         with:
-          report_paths: '**/junit.xml'
+          report_paths: tf_junit.xml
