--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,15 +12,24 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'  # or whatever version you use
+
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
       - uses: hashicorp/setup-terraform@v1
 
       - name: terraform test
         id: test
         run: |
-          terraform init && terraform test -junit-xml=junit.xml
+          terraform init && terraform test -junit-xml=tf_junit.xml
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v5
         if: success() || failure() # always run even if the previous step fails
         with:
-          report_paths: '**/junit.xml'
+          report_paths: tf_junit.xml
